ci/k8s/admin.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "admin-deployment"
  namespace: framework-demo
spec:
  selector:
    matchLabels:
      app: "admin"
  revisionHistoryLimit: 1
  template:
    metadata:
      labels:
        app: "admin"
    spec:
      containers:
        - name: "admin"
          image: "admin:v1"
          imagePullPolicy: Never
          ports:
            - name: http
              containerPort: 8080
            - name: debug
              containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: "admin-service"
  namespace: framework-demo
spec:
  selector:
    app: "admin"
  ports:
    - name: http
      targetPort: 8080
      port: 8080
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: admin-ingress
  namespace: framework-demo
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`app.nyomio.local`) && PathPrefix(`/api/v1/admin/`)
      kind: Rule
      priority: 2
      services:
        - name: admin-service
          port: 8080
  tls:
    secretName: certsecret
