ci/k8s/webapp.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "webapp-deployment"
  namespace: framework-demo
spec:
  selector:
    matchLabels:
      app: "webapp"
  revisionHistoryLimit: 1
  template:
    metadata:
      labels:
        app: "webapp"
    spec:
      containers:
        - name: "webapp"
          image: "webapp:v1"
          imagePullPolicy: Never
          ports:
            - name: http
              containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: "webapp-service"
  namespace: framework-demo
spec:
  selector:
    app: "webapp"
  ports:
    - name: http
      targetPort: 80
      port: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: rediredt-404-to-index-html
  namespace: framework-demo
spec:
  errors:
    status:
      - 404
    query: /
    service:
      name: webapp-service
      port: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: webapp-ingress
  namespace: framework-demo
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`app.nyomio.local`)
      kind: Rule
      priority: 1
      services:
        - name: webapp-service
          port: 80
      middlewares:
        - name: rediredt-404-to-index-html
  tls:
    secretName: certsecret
